--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -991,10 +991,15 @@ height: 811px;
     -o-transition: all 0.35s ease;
     transition: all 0.35s ease;
 }
-
-.tf-icon-box .icon-wrap i{
-    font-size: 50px;
-    color: #050b8b;
+.tf-icon-box.tf-iconbox-category:hover .icon-wrap img{
+    filter: brightness(52.5);
+}
+.col-box.active .icon-wrap img{
+    filter: brightness(52.5);
+}
+.tf-icon-box .icon-wrap img{
+    width: 50px;
+   
 }
 
 .tf-icon-box .btn-icon-box{
