--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-/**
-  * Name: Kababi
-  * Version: 1.0.2
-  * Author: Themesflat
-  * Author URI: http://www.themesflat.com
-*/
 
 @import url('https://fonts.googleapis.com/css2?family=Forum&amp;family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap');
 @import "bootstrap.css";
@@ -1228,7 +1222,7 @@ h6 a {
     position: absolute;
     top: 0;
     height: 95px;
-    background-color: #747474ba;
+    background-color: #ffffffba;
 }
 
 #site-header.site-header-inner-page #site-header-inner.container-fluid{
@@ -1296,7 +1290,7 @@ h6 a {
     font-size: 17px;
     font-weight: 400;
     line-height: 35px;
-    color: #fff;
+    color: #000;
     position: relative;
     font-family: 'Open Sans', sans-serif;
 }
@@ -1608,7 +1602,7 @@ h6 a {
 }
 
 #site-header.site-header-inner-page.is-fixed.is-small {
-    background: rgb(29, 29, 29);
+    background: rgb(255, 255, 255);
     opacity: 1;
     -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
     filter: alpha(opacity=100);
@@ -1619,6 +1613,9 @@ h6 a {
     -ms-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    box-shadow: 0px 0px 50px 10px rgb(0 0 0 / 10%);
+    -webkit-box-shadow: 0px 0px 50px 10px rgb(0 0 0 / 10%);
+    -moz-box-shadow: 0px 0px 50px 10px rgba(0,0,0,.10);
     top: 0;
 }
 
