--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -922,7 +922,7 @@ h6 a {
 }
 
 .col-box.col-25{
-    width: 25%;
+    width: 33%;
 }
 
 .col-box.col-50{
@@ -1234,7 +1234,7 @@ h6 a {
 }
 
 #site-header.site-header-inner-page #site-header-inner #main-nav{
-    right:0;
+    left: 28%;
     -webkit-transform: translateY(0);
     -ms-transform: translateY(0);
     -o-transform: translateY(0);
@@ -1544,15 +1544,15 @@ h6 a {
 }
 
 #site-header #site-header-inner .header-contact{
-    right: 15.8%;
-    top: 2px;
+    right: -0.2%;
+    top: 20px;
 }
 
 #site-header-inner .header-contact span{
     font-size: 17px;
     line-height: 35px;
     font-family: 'Open Sans', sans-serif;
-    color: #fff;
+    color: #000;
 }
 
 #site-header #site-header-inner .header-contact .address::before{
