--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -3809,6 +3809,35 @@ height: 811px;
     z-index: -1;
 }
 
+.item-box2{
+    width: 22.3333333%;
+    float: left;
+    margin: 0 15px;
+    margin-bottom: 30px;
+    box-shadow: 1px 1px 12px #0000004a;
+    border-radius: 10px;
+}
+
+.item-box2 .item{
+    position: relative;
+}
+
+/* .item-box2 .item::after {
+    content: "";
+    border: 1px solid rgba(9,12,15,0.1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+} */
+
+
+
+
+
+
 .item.style2{
     position: relative;
 }
